# Nairobi_Protocol-GDE-

./: .gitignore  CITATION.md  LICENSE  README.md  benchmark_1m_mojo.mojo  benchmark_collision_mojo.mojo  benchmark_distance_mojo.mojo  benchmark_faiss.py  benchmark_gde.py  benchmark_gde_mojo.mojo  benchmark_rag.py  benchmark_retrieval.mojo  build_knowledge_base.py  build_portable.sh  consistency_check.mojo  engine_vault.bin.idx  knowledge_store.mojo  performance_test.mojo  pixi.toml  probe_time.mojo  pyproject.toml  query_engine.mojo  stress_test_1m.mojo  stress_test_mmap.mojo
data/: global_ontology.db  word_list.txt
docs/: DEPLOYMENT.md  analysis_results.md  implementation_plan.md
src/: logic_engine_portable.mojo
src/0_refinery/: contrast_lca.py  ontology_parser.py
src/1_gateway/: persistence.mojo  phonological.mojo  spectral.mojo  wavelet.mojo
src/2_execution/: atlas_manager.mojo  coordinate_bridge.mojo  logic_kernels.mojo
src/gde/: __init__.py  cli.py  hasher.py  ingest.py  manifest.py  mcp_server.py  store.py
tests/: integration_bench.mojo  integration_bench.py  phonological_seed.mojo  phonological_seed_reference.py  run_tests.py  test_hasher.py  test_ingest.py  test_store.py
