[project]
name = "nairobi-protocol-gde"
version = "0.1.0"
description = "Geometric Determinism Engine — deterministic O(1) content-addressed knowledge store"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [
    { name = "Tom Kimingi", email = "tkimingi@example.com" },
]
dependencies = [
    "mcp>=1.0.0",
]

[project.scripts]
gde = "gde.cli:main"
gde-server = "gde.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
